# brainstack

./: README.md  SECURITY.md  package-lock.json
AI Projects/servicenow-ai-chat/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
AI Projects/servicenow-ai-chat/backend/: .env.example
AI Projects/servicenow-ai-chat/backend/app/: __init__.py  config.py  database.py  main.py
AI Projects/servicenow-ai-chat/backend/app/api/: __init__.py  routes.py
AI Projects/servicenow-ai-chat/backend/app/models/: __init__.py  ticket.py
AI Projects/servicenow-ai-chat/backend/app/schemas/: __init__.py  chat.py  ticket.py
AI Projects/servicenow-ai-chat/backend/app/services/: __init__.py  analytics_service.py  cache_service.py  context_builder.py  embedding_service.py  prompt_builder.py  reranker.py  retriever.py  text_utils.py  ticket_ingestion.py  (+1 more)
AI Projects/servicenow-ai-chat/data/: README.md
AI Projects/servicenow-ai-chat/docs/: CLEANUP_AND_REFACTOR_PLAN.md  architecture.md  caching.md
AI Projects/servicenow-ai-chat/frontend/: index.html  package-lock.json  package.json  vite.config.js
AI Projects/servicenow-ai-chat/frontend/src/: styles.css
AI Projects/servicenow-ai-chat/sample_data/: jira_tickets.json
AI Projects/servicenow-ai-chat/scripts/: generate_dummy_jira_tickets.py
AI Projects/servicenow-ai-chat/src/jira_chatbot/: api.py  cli.py  config.py  jira_client.py  models.py  preprocessing.py  prompts.py  retrieval.py  service.py
AI Projects/servicenow-ai-chat/tests/: test_analysis.py  test_prompts.py  test_retrieval.py  test_service.py
(+588 files in other folders)
