[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "servicenow-ai-chatbot"
version = "0.1.0"
description = "Grounded Jira ticket analysis chatbot backend"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
test = ["pytest>=8.0"]

[project.scripts]
jira-chatbot = "jira_chatbot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
